--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,8 +8,7 @@
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
           <a class="nav-link active" aria-current="page" href="#">Home</a>
-          <a class="nav-link" href="#">Add Student</a>
-          <a class="nav-link" href="#">Edit Student</a>
+          <a class="nav-link" href="add-student">Add Student</a>
           <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
         </div>
       </div>
