--- a/src/app/edit-student/edit-student.component.html
+++ b/src/app/edit-student/edit-student.component.html
@@ -3,7 +3,7 @@
     <h2>Edit Student</h2>
   </div>
   <div class="col-md-12">
-    <form [formGroup]="addStudent" novalidate class="form">
+    <form [formGroup]="studentForm" novalidate class="form" (ngSubmit)="onSubmit()">
       <div class="row">
         <div class="col-md-2"></div>
         <div class="col-md-4">First Name</div>
@@ -31,7 +31,7 @@
       <div class="row">
         <div class="col-md-2"></div>
         <div class="col-md-8">
-          <button class="btn btn-success" type="submit" (onSubmit)="onSubmit()">Edit Student</button>
+          <button class="btn btn-success" type="submit" >Edit Student</button>
         </div>
         <div class="col-md-2"></div>
       </div>
